Adds percentage calcultor function

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ body {margin: 30px;}
 <input type="button" onClick="multiplyBy()" Value="Multiply" />
 <input type="button" onClick="divideBy()" Value="Divide" />
 <input type="button" onclick="addition()"Value="add"/>
+<input type="button" onclick="subtract()" value="subtract"/>
+<input type="button" onclick="percentage()" value="percentage">
 </form>
 <p>The Result is : <br>
 <span id = "result"></span>
